@@ -1,3 +1,10 @@
+2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Vitali Perchonok is com gmail from vitali.pe
+	Prevent an evil crash bug when the kids press 2 buttons at the same time
+
+	* src/boards/menu2.c: (item_event):
+
 2009-01-30  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Vitali Perchonok is com gmail from vitali.pe
